[package]
name = "serde-mml"
version = "1.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = "1.0.110"
base64 = "0.12.1"
thiserror = "1.0.17"
serde_json = "1.0.53"
serde-transcode = "1.1.0"

[dev-dependencies]
proptest = "0.9.6"
serde-value = "0.6.0"
serde_bytes = "0.11.4"
